--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,9 @@
 \usepackage[withpage]{acronym} % optional command: printonlyused
 \usepackage{listings}
 \usepackage{color}
+\usepackage{float}
+\usepackage{booktabs} % pra formatar as tabelas
+\usepackage{subfig} %para as subfiguras
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -75,7 +78,7 @@
 
 % Título da dissertação/tese
 % e.g. \title{Sobre a conjectura $P=NP$}
-\title{Iluminação de LED controlada pela internet}
+\title{Controle e monitoramento de sinalização semafórica em vias urbanas utilizando microcontroladores}
 
 % Data da defesa
 % e.g. \date{19 de fevereiro de 2003}
